<resources>
    <string name="app_name">Quiz Creator</string>
    <string name="add_new_questions">Add new Questions</string>
    <string name="cant_add_more_answers">Can\'t add more answers!</string>
    <string name="microphone_button">Microphone Button</string>
    <string name="add_answer">Add Answer</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="enter_question">Enter question</string>
    <string name="question_empty_error">Question can not be empty!</string>
    <string name="question_category_not_set">Question category is not set</string>
    <string name="question_answers_empty">Answers can not be empty</string>
    <string name="category_name_empty">Category name can\'t be empty!</string>
    <string name="general">General</string>
    <string name="add_category">Add Category</string>
    <string name="update_category">Edit Category</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="category_add_success">Successfully added category!</string>
    <string name="duplicate_category_error">Duplicate category!</string>
    <string name="question_no_correct_answer_error">Question must contain a correct answer!</string>
    <string name="generate_quiz">Generate Quiz</string>
    <string name="select_category">Select category</string>
    <string name="question_number">Question %1$d</string>
    <string name="save">Save</string>
    <string name="add_answer_here">Add answer here</string>
    <string name="delete">Delete</string>
    <string name="question_not_found">Question was not found!</string>
    <string name="no_questions_found">No Questions found!</string>
    <string name="quiz_not_valid">Quiz not valid!</string>
    <string name="exit_quiz_question">Do you really want to exit this quiz?</string>
    <string name="exit_quiz">Exit Quiz</string>
    <string name="category_name">Category name</string>
    <string name="one_answer_correct_error">Atleast 1 correct answer required!</string>
    <string name="shuffle_answers">Shuffle answers</string>
    <string name="only_single_choice">Only single choice</string>
    <string name="view_questions">View questions</string>
    <string name="Exit">Exit Quiz</string>
    <string name="store_quiz_error">Could not store quiz!</string>
    <string name="success_rates_for_categories">Success rates for categories</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="finished_quizes_in_last_7_days">Finished Quizes in last 7 days</string>
    <string name="finished">Finished</string>
    <string name="finished_good">Finished with 80% or more correct</string>
    <string name="success_rates">Success Rates</string>
    <string name="question_success_rates">Question success Rates</string>
    <string name="all_categories">All categories</string>
    <string name="other_statistics">Other statistics</string>
    <string name="reset">Reset</string>
    <string name="answer_default_text">Answer default text</string>
    <string name="questions">Questions</string>
    <string name="categories">Categories</string>
    <string name="answers">Answers</string>
    <string name="category">Category</string>
    <string name="question">Question</string>
    <string name="correct_questions">Answered %1$d / %2$d questions correctly in %3$d Seconds</string>
    <string name="single_choice">Single Choice</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="max_question_amount">Max question amount</string>
    <string name="max_quiz_questions">Max. Quiz Questions</string>
    <string name="x_questions">%1$d questions</string>
    <string name="delete_category">Delete category %1$s</string>
    <string name="delete_category_confirmation">Do you really want to delete this category and all the contained questions?</string>
    <string name="export_import">Export / Import</string>
    <string name="valid_file">Valid file!</string>
    <string name="invalid_file">Invalid file!</string>
    <string name="import_export_questions">Import/Export Questions and Categories</string>
    <string name="import_failed">Import failed</string>
    <string name="import_success">Import success</string>
    <string name="export_successful">Exported to your downloads folder!</string>
    <string name="export_error">Could not export data</string>
    <string name="confirm">Confirm</string>
    <string name="edit_everything">Edit everything</string>
    <string name="correct_multiple">Correct multiple choice questions</string>
    <string name="correct_single">Correct single choice questions</string>
    <string name="statistics">Statistics</string>
    <string name="quiz">Quiz</string>
    <string name="answer_options">Answer options</string>
    <string name="set_max_answer_error">Can\'t set maximum lower than currently added answer amount!</string>
    <string name="not_enough_answers">Not enough answers available :(</string>
    <string name="max_answers_minimum">4 max answers is the minimum!</string>
    <string name="max_answer_amount">Max. answer amount</string>
    <string name="quiz_options">Quiz options</string>
    <string name="only_single_choice_subtitle">Only include single choice questions in this quiz</string>
    <string name="max_question_amount_subtitle">Choose how many questions this quiz should contain</string>
    <string name="add_new_question">Add a new question</string>
    <string name="delete_question_question">Do you really want to delete this question?</string>
    <string name="delete_question">Delete question</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="quiz_archive">Quiz Archive</string>
    <string name="archive_item_questions">%1$s questions correct of %2$s</string>
    <string name="reset_statistics">Reset Statistics</string>
    <string name="reset_statistics_question">Do you really want to delete your statistics and all archived quizzes?</string>
    <string name="max_answers_description">Defines the size of the answer pool. Missing answers will automatically be imported from other questions until max is reached. During a quiz, 4 random answers will be picked from the answer pool.</string>
    <string name="same_category_subtitle">Only allow automatic import of answers from questions of the same category</string>
    <string name="only_from_same_category">Only from same category</string>
    <string name="tutorial_category_tab">In the \'Category\'-tab you can create and edit categories. These are used to sort your questions.</string>
    <string name="tutorial_question_tab">You can view, create and edit questions in the \'Questions\'-tab</string>
    <string name="tutorial_microphone">By pressing and holding the microphone button, you can enter text via speech</string>
    <string name="tutorial_answer_pool">Each question can contain up to 20 answers. In the quiz, 4 answers will randomly be chosen.</string>
    <string name="tutorial_answer_options">With the \'Max. Answers\' option you can define how big the answer pool of the question for randomly choosing the 4 answers  should be. If you enter less answers than the set maximum, answers from other questions will be imported automatically.</string>
    <string name="tutorial_quiz">In the \'Quiz\'-tab you can create a new quiz or view an archive of your previous ones.</string>
    <string name="tutorial_statistics">In the \'Statistics\'-tab you can view how well you did in your previous quizzes.</string>
    <string name="welcome">Welcome to \'Quiz Creator\'</string>
    <string name="tutorial_end">That\'s it, have fun! You can write feedback about the app to weisslinus@gmail.com</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="finished_quiz">Finished Quiz!</string>
</resources>
