<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sunilson.quizcreator.presentation.MainActivity.fragments.CreateQuizFragment.CreateQuizViewModel" />

        <import type="android.view.View" />

        <import type="com.sunilson.quizcreator.data.models.Category" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shuffle_answers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/shuffle_answers" />

            <Switch
                android:id="@+id/shuffle_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.shuffleAnswers}" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/single_or_multiple_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/only_single_choice" />

            <Switch
                android:id="@+id/single_or_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.singleOrMultiple}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quiz_category_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/select_category" />

            <Switch
                android:id="@+id/categoryswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(cb, isChecked) -> viewModel.unselectCategory(isChecked)}" />
        </LinearLayout>

        <Spinner
            android:id="@+id/category_quiz_spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{categoryswitch.checked ? View.VISIBLE : View.GONE}"
            app:categories="@{viewModel.categories}"
            app:itemSelectedCallback="@{(item) -> viewModel.selectCategory((Category) item)}" />

        <com.sunilson.quizcreator.presentation.views.CustomButton
            android:id="@+id/select_question_amount_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonText="@string/max_question_amount"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.maxQuestionAmount + ``}"
            />

        <com.sunilson.quizcreator.presentation.views.CustomButton
            android:id="@+id/generate_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:buttonIcon="@drawable/ic_play_arrow_white_24dp"
            app:buttonText="@string/generate_quiz" />

    </LinearLayout>
</layout>