<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.sunilson.quizcreator.presentation.QuizActivity.QuizViewModel" />

        <import type="android.view.View" />

        <import type="com.sunilson.quizcreator.data.models.Category" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/result_checkmark_animation"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            app:lottie_fileName="check_mark_-_done.json"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/result_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished_quiz"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/result_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{@string/correct_questions(viewModel.correctQuestions, viewModel.currentQuiz.questions.size, viewModel.finalDuration)}"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible" />

        <com.sunilson.quizcreator.presentation.views.CustomButton
            android:id="@+id/button_view_archive"
            android:layout_width="150dp"
            android:layout_height="@dimen/big_button_height"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:buttonText="@string/view_questions"
            app:type="DEFAULT" />

        <com.sunilson.quizcreator.presentation.views.CustomButton
            android:id="@+id/button_exit_quiz"
            android:layout_width="150dp"
            android:layout_height="@dimen/big_button_height"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:buttonIcon="@drawable/ic_exit_to_app_black_24dp"
            app:buttonText="@string/Exit"
            app:type="CANCEL" />

        <!--
        <Button
            android:id="@+id/button_view_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:buttonText="@string/view_questions"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/button_exit_quiz"
            app:layout_constraintLeft_toRightOf="@id/button_exit_quiz"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_exit_quiz" />
            -->
    </LinearLayout>
</layout>